# copier-python-fastapi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Justfile  README.md  pyproject.toml
.github/workflows/: test.yml
copier/: settings.yml
copier/extensions/: context.py  license.py  slugify.py  version.py
copier/questions/: features.yml
template/: .editorconfig.jinja  .env.example.jinja  .gitignore.jinja  .pylintrc  Justfile.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  {% if with_db %}alembic{% endif %}.ini  {% if with_tox %}tox.ini{% endif %}.jinja
template/.github/workflows/: test.yml.jinja
template/src/{{project_package}}/: main.py.jinja
template/src/{{project_package}}/api/v1/: status.py
template/src/{{project_package}}/core/: config.py.jinja  models.py  {% if with_db %}db{% endif %}.py  {% if with_db %}models{% endif %}.py
template/tests/: conftest.py.jinja  test_about.py.jinja  test_index.py
template/{% if with_db %}alembic{% endif %}/: env.py.jinja  script.py.mako
tests/: test_licenses_and_readme.py  test_package.py  test_pyproject_toml.py  test_tox.py  utils.py
